Preventing the Layout Shift Caused by Scrollbar

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 .jumbotron {
     padding: 4rem 2rem;
     margin-bottom: 2rem;
